terminado la estructua html

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,7 +1,44 @@
 /*Aqui va a ir los estilos css para el index.html*/
-*{
+
+
+
+* 
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: yellow;
+}
+
+/*Voy a darle estilos al body*/
+body 
+{
+    background-color: azure;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 30px;
+}
+
+/*Voy a darle estilos al header*/
+header 
+{
+    background-color: bisque;
+    text-align: right;
+}
+
+header h1 
+{
+    color: rgb(36, 36, 173);
+}
+
+.menu 
+{
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    color: rgb(52, 201, 35);
 }
