--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -113,5 +113,73 @@ header .texto h3{
     left: 0;
     top: -50px;
     z-index: 0;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, .35);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+
+.main .acerca-de .foto img{
+    vertical-align: top;
+    width: 100%;
+}
+
+.main .acerca-de article{
+    background: #fff;
+    padding: 20px;
+    width: 75%;
+    position: relative;
+    top: 50px;
+    z-index: 1;
+    float: right;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+}
+
+.main .acerca-de article h3{
+    font-size: 50px;
+    font-weight: 300;
+    margin-bottom: 40px;
+}
+
+.main .acerca-de article p{
+    line-height: 20px;
+    margin-bottom: 15px;
+}
+/* seccion menú*/
+.main .menu{
+    padding-top: 630px;
+    margin-bottom: 50px;
+}
+
+.main .menu .titulo{
+    font-size: 40px;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.main .menu .contenedor-menu,
+.main .menu .contenedor-menu2{
+    border: 2px solid #000;
+    background: transparent;
+    padding: 10px;
+    overflow: hidden;
+    box-shadow: 15px 0px 15px 0 rgba(0, 0, 0, 0.5);
+}
+
+.main .menu article{
+    width: 50%;
+    /*background-color: #18a08c;*/
+    float: left;
+    padding: 20px;
+}
+.main .menu .categoria{
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.main .menu .platillo{
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    border-bottom: 4px dotted #000;
+    overflow: hidden;
 }
