--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -158,7 +158,7 @@ header .texto h3{
 .main .menu .contenedor-menu,
 .main .menu .contenedor-menu2{
     border: 2px solid #000;
-    background: transparent;
+    background: #739da2c6;
     padding: 10px;
     overflow: hidden;
     box-shadow: 15px 0px 15px 0 rgba(0, 0, 0, 0.5);
@@ -182,4 +182,195 @@ header .texto h3{
     padding-bottom: 20px;
     border-bottom: 4px dotted #000;
     overflow: hidden;
+}
+
+.main .menu .nombre{
+    font-size:20px;
+    margin-bottom: 15px;
+    float: left;
+}
+
+.main .menu .precio{
+    font-size: 20px;
+    margin-bottom: 15px;
+    float: right;
+}
+
+.main .menu .descripcion{
+    font-size: 16px;
+    color: #676767;
+    clear: both;
+}
+/*Estilos a la sección galeria*/
+.main .galeria{
+    overflow: hidden;
+}
+
+.main .galeria .foto{
+    width: 25%;
+    float: right;
+}
+.main .galeria .foto img{
+    width: 100%;
+    vertical-align: top;
+    opacity: 0.7;
+    
+}
+
+.main .galeria .foto img:hover{
+    opacity: 1;
+    
+    -webkit-transition: all 0.3s ease;
+    -o-transition:all .3s ease;
+    transition: all 0.3s ease;
+
+}
+
+/*-------Ubicación--------*/
+.mian .ubicacion{
+    background: #fff;
+    padding: 60px;
+    overflow: hidden;
+}
+
+.main .ubicacion .titulo{
+    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 300;
+    margin-bottom: 40px;
+}
+.main .ubicacion .direccion{
+    float: left;
+    width: 50%;
+    text-align: left;
+}
+
+.main .ubicacion .horarios{
+    float: right;
+    width: 50%;
+    text-align: right;
+    overflow: hidden;
+}
+
+.main .ubicacion .direccion .calle{
+    margin-bottom: 15px;
+}
+
+.main .ubicacion .horarios h4{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.main .ubicacion .horarios .entre-semana,
+.main .ubicacion .horarios .fin-semana{
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.main .mapa{
+    width: 100%;
+    overflow: hidden;
+    
+}
+
+.main .mapa iframe{
+    width: 100%;
+    max-height: 600px;
+}
+
+/*-------footer--------*/
+footer{
+    background: #000;
+}
+
+footer .copyright{
+    text-align: center;
+    padding: 15px 0;
+    color: #fff;
+}
+
+/*-----------MEDIA QUERIES-----------*/
+@media screen and (max-width: 800px){
+    header .contenedor{
+        position: static;
+        height: auto;
+    }
+
+    header .texto{
+        position: static;
+        margin: 100px 0;
+    }
+
+    header .menu{
+        text-align: center;;
+    }
+    header .menu a{
+        margin: 10px 20px;
+    }
+
+    header .texto .nombre{
+        font-size: 30px;
+    }
+
+    header .texto h3{
+        font-size: 18px;
+    }
+
+    .main .acerca-de .foto{
+        width: 100%;
+        position: relative;
+    }
+    .main .acerca-de article{
+        position: relative;
+        width: 100%;
+        top: -50px;
+        transform: translate(0px, 0);
+    }
+
+    .main .menu{
+        padding-top: 300px;
+    }
+
+    .main .menu article{
+        width: 100%;
+    }
+
+    .main .galeria .foto{
+        width: 50%;
+    }
+
+    .main .mapa{
+        width: 80%;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 400px){
+   
+    .main .acerca-de article h3{
+        font-size: 34px;
+        margin-bottom: 10px;
+    }
+
+    .main .menu article .nombre,
+    .main .menu article .precio{
+        font-size: 16px;
+        line-height: 16px;
+    }
+
+    .main .galeria .foto{
+        width: 100%;
+    }
+
+    .main .ubicacion .direccion{
+        margin-bottom: 15px;
+    }
+    .main .ubicacion .direccion,
+    .main .ubicacion .horarios{
+        width: 100%;
+        float: none;
+        text-align: center;
+    }
 }
