--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -227,7 +227,7 @@ header .texto h3{
 }
 
 /*-------Ubicación--------*/
-.mian .ubicacion{
+.main .ubicacion{
     background: #fff;
     padding: 60px;
     overflow: hidden;
@@ -304,14 +304,18 @@ footer .copyright{
     }
 
     header .menu{
-        text-align: center;;
+        text-align: center;
     }
     header .menu a{
         margin: 10px 20px;
     }
 
+    header .menu a:hover{
+        color: bisque;
+    }
+
     header .texto .nombre{
-        font-size: 30px;
+        font-size: 20px;
     }
 
     header .texto h3{
@@ -330,7 +334,7 @@ footer .copyright{
     }
 
     .main .menu{
-        padding-top: 300px;
+        padding-top: 100px;
     }
 
     .main .menu article{
@@ -348,6 +352,10 @@ footer .copyright{
 }
 
 @media screen and (max-width: 400px){
+
+    header .menu a:hover{
+        color: aqua;
+    }
    
     .main .acerca-de article h3{
         font-size: 34px;
@@ -356,7 +364,7 @@ footer .copyright{
 
     .main .menu article .nombre,
     .main .menu article .precio{
-        font-size: 16px;
+        font-size: 17px;
         line-height: 16px;
     }
 
@@ -372,5 +380,9 @@ footer .copyright{
         width: 100%;
         float: none;
         text-align: center;
+    }
+    footer .copyright p{
+        color: #fff;
+        font-size: 10px;
     }
 }
